.metals/.reports/metals/r_scala-toplevel-mtags_1690120828081
id: file://<WORKSPACE>/src/main/scala/gcd/Practice/abc.scala.scala:[65..65) in Input.VirtualFile("file://<WORKSPACE>/src/main/scala/gcd/Practice/abc.scala.scala", "package Practice

import chisel3._
import chisel3.util._

class 
")
file://<WORKSPACE>/src/main/scala/gcd/Practice/abc.scala.scala:7: error: expected identifier; obtained eof

^